fixed gaps in 9-slice frames

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,3 +1,8 @@
+html, body {
+    background-color: #000;
+    color: #fff;
+}
+
 fieldset {
     border: none;
 }
